[gd_scene load_steps=7 format=3 uid="uid://dyo3ytle7ux47"]

[ext_resource type="Script" uid="uid://b3ok516df1mee" path="res://Scripts/Parts/PartLeg.gd" id="1_nvabi"]
[ext_resource type="PackedScene" uid="uid://dhnqboav0dptx" path="res://Models/Parts/Engineer/EngineerQuadLeg.glb" id="2_x17qk"]
[ext_resource type="Script" uid="uid://cfsd884pdedwm" path="res://Scripts/Parts/PaintedMesh.gd" id="3_biocd"]
[ext_resource type="Script" uid="uid://cp0mj2ij12w11" path="res://Scripts/Parts/PhysicalBone.gd" id="5_iumly"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2blf5"]
radius = 0.0783734
height = 0.783734

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1af12"]
radius = 0.0759931
height = 0.759931

[node name="QuadLeg" type="Node3D" node_paths=PackedStringArray("IK", "skeleton_phys")]
script = ExtResource("1_nvabi")
length = 1.05
IK = NodePath("EngineerQuadLeg/Armature_002/Skeleton3D/SkeletonIK3D")
skeleton_phys = NodePath("EngineerQuadLeg/Armature_002/Skeleton3D/PhysicalBoneSimulator3D")
front_name = "Quad Leg"
mass = 20

[node name="EngineerQuadLeg" parent="." instance=ExtResource("2_x17qk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.511967, 0)

[node name="Skeleton3D" parent="EngineerQuadLeg/Armature_002" index="0"]
bones/1/rotation = Quaternion(0.685612, -0.465128, 0.46294, -0.315087)
bones/1/scale = Vector3(1, 1, 1)
bones/2/rotation = Quaternion(0.000546423, 0.00122562, -0.00122559, 0.999998)

[node name="Body_005" parent="EngineerQuadLeg/Armature_002/Skeleton3D" index="0"]
script = ExtResource("3_biocd")
material_id = 1

[node name="SkeletonIK3D" type="SkeletonIK3D" parent="EngineerQuadLeg/Armature_002/Skeleton3D" index="1"]
root_bone = &"LegFront.L"
tip_bone = &"ForelegFront.L.001"
override_tip_basis = false
use_magnet = true
magnet = Vector3(0, 100, 0)
target_node = NodePath("../../../../Target")

[node name="PhysicalBoneSimulator3D" type="PhysicalBoneSimulator3D" parent="EngineerQuadLeg/Armature_002/Skeleton3D" index="2"]
influence = 0.0

[node name="Physical Bone LegFront_L" type="PhysicalBone3D" parent="EngineerQuadLeg/Armature_002/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(0.137257, 0.344709, 0.928621, 0.344709, 0.862271, -0.37103, -0.928621, 0.37103, -0.000471598, -0.363134, 0.644323, 0.00210667)
collision_layer = 4
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.32003e-06, -1.9849e-05, 0.391827)
body_offset = Transform3D(1, -1.19209e-07, 5.73345e-09, -1.46974e-08, -5.40604e-08, -1, 1.19209e-07, 1, -7.85803e-09, -6.32228e-06, 0.391827, 1.98521e-05)
bone_name = "LegFront.L"
script = ExtResource("5_iumly")

[node name="CollisionShape3D" type="CollisionShape3D" parent="EngineerQuadLeg/Armature_002/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone LegFront_L"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_2blf5")

[node name="Physical Bone ForelegFront_L" type="PhysicalBone3D" parent="EngineerQuadLeg/Armature_002/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(0.999994, -0.00245388, 0.00245077, -0.00245345, -0.00108981, 0.999996, -0.0024512, -0.999996, -0.00109582, -0.728004, 0.409753, 0.00269398)
collision_layer = 4
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.10099e-07, -6.51237e-07, 0.379966)
body_offset = Transform3D(1, -7.5018e-07, 3.96073e-07, 4.23195e-07, 1.18511e-07, -1, 6.64499e-07, 1, 1.69151e-07, 5.96046e-08, 0.379966, 5.86966e-07)
bone_name = "ForelegFront.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0
script = ExtResource("5_iumly")

[node name="CollisionShape3D" type="CollisionShape3D" parent="EngineerQuadLeg/Armature_002/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone ForelegFront_L"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_1af12")

[node name="Target" type="Marker3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -0.753151, -0.662339, 0)

[node name="PlacementTarget" type="Marker3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -0.753151, -0.662339, 0)

[node name="PlacementTop" type="Marker3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -0.448231, 0.387659, 0)

[node name="RestTarget" type="Marker3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -0.614961, -0.100228, 0)

[node name="WorldTarget" type="Marker3D" parent="."]
top_level = true

[editable path="EngineerQuadLeg"]
